--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
 					</div>
 					<div class="col-md-4 col-xs-6 col-sm-6">
 						<section class="datos text-center">
-							<h4 >Nuestros Valores</h4>
+							<h4 >Valores</h4>
 							<p>Compromiso, Trasparencia y honestidad</p>
 						</section>
 					</div>
